# Interview-IT

./: .gitignore  LICENSE  pyproject.toml
interview-bot/: pyproject.toml
interview-bot/app/: main.py  models.py
interview-bot/app/services/: asr.py  llm.py  tts.py
interview-bot/app/templates/: __init__.py  prompt.txt
notebooks/: dsa_v1.ipynb  system_prompt.txt  user_prompt.txt  v1.ipynb  v1.py
notebooks/audio_experiments/: main.py
notebooks/audio_experiments/templates/: index.html
notebooks/prompts/behavioral/: system_prompt.txt  user_prompt.txt
notebooks/prompts/dsa/: VARIABLES.md  system_prompt.txt  user_prompt.txt
notebooks/prompts/system_design/: system_prompt.txt  user_prompt.txt
notebooks/src/: app.py  main.py
notebooks/src/frontend/: app.js  index.html
notebooks/src/routes/: routes.py
notebooks/src/services/: deepgram_api.py  message_processor.py  speech_to_text_service.py  text_to_speech_service.py  websocket_handler.py
src/: pyproject.toml
src/alembic/: env.py
src/app/core/: config.py
src/app/crud/: user.py
src/app/models/: user.py
src/app/schemas/: user.py
src/app/utils/: jwt_utils.py
user/: .gitignore  Makefile  mypy.ini  pyproject.toml  run.py
user/app/: main.py
user/app/api/: auth.py  token_validation.py
user/app/core/: config.py  security.py
user/app/services/: firebase_service.py
user/tests/: test_auth.py  test_token_validation.py
