[tool.poetry]
name = "interview-it"
version = "1.0.0"
description = "AI Based Interview Platform for IT Sector"
authors = ["Abdulmunim <66489217+abdulmunimjemal@users.noreply.github.com>"]
license = "Custom \"Read-Only\" License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
langchain-community = "^0.2.12"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
