[tool.poetry]
name = "interview it (web app)"
version = "1.0.0"
description = "Interview IT Web App"
authors = ["Abdulmunim <66489217+abdulmunimjemal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.30.6"
fastcrud = "^0.14.0"
sqlalchemy = "^2.0.32"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
httpx = "^0.27.0"
oauthlib = "^3.2.2"
databases = "^0.9.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
